# climate-finance-package

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  default.mk  pyproject.toml
.github/workflows/: CI.yaml  release.yaml
climate_finance/: README.md  __init__.py  config.py  mp_testing_reading_functions.py  outputs.py
climate_finance/.raw_data/: data_updates.json  imputed_missing.csv
climate_finance/common/: analysis_tools.py  match_projects_to_crs.py  schema.py
climate_finance/core/: data.py  deflators.py  dtypes.py  enums.py  loaders.py  oecd_classification.csv  tools.py  validation.py
climate_finance/data/: enums.py  get.py
climate_finance/methodologies/bilateral/: bilateral_methodologies.py  tools.py
climate_finance/methodologies/imputed_multilateral/: multilateral_spending_data.py  tools.py
climate_finance/methodologies/multilateral/: crs_tools.py  multilateral_spending_data.py  tools.py
climate_finance/methodologies/spending/: crdf.py  crdf_crs.py  crs.py  tools.py
climate_finance/oecd/: get_data.py  get_oecd_data.py
climate_finance/oecd/cleaning_tools/: crs_channel_mapping.csv  names.py  provider_agency_names.feather  provider_names.feather  recipient_names.feather  schema.py  settings.py  tools.py
climate_finance/oecd/climate_analysis/: detailed_multilateral_imputations.py  tools.py
climate_finance/oecd/climate_related_activities/: provider_perspective.py  recipient_perspective.py  tools.py
climate_finance/oecd/crdf/: provider_perspective.py  recipient_perspective.py  tools.py
climate_finance/oecd/crs/: add_crs_data.py  get_data.py
climate_finance/oecd/imputations/: get_data.py
climate_finance/unfccc/: README.md  cleaning_tools.py  get_unfccc_data.py
climate_finance/validation/: matching_methodology.py
github/workflows/: release.yaml
tests/: README.md
tests/test_data/: test_validation.py
tests/test_oecd/: test_get_oecd_data.py
tests/test_unfccc/: test_cleaning_tools.py  test_unfccc_get_unfccc_data.py
(+65 files in other folders)
