[tool.poetry]
name = "climate-finance"
version = "1.1.2"
description = "Climate Finance data"
authors = ["Jorge Rivera, The ONE Campaign"]
license = "MIT"
readme = "README.md"
packages = [{include = "climate_finance"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2"
requests = "^2.3"
selenium = "^4.10"
openpyxl = "^3.1"
oda-data = "^1.1"
bblocks = "^1.2"
thefuzz = {extras = ["speedup"], version = "^0.22"}
webdriver-manager = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8"
bump2version = "^1.0"
black = "^25"
pytest-cov = "^4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
