[project]
name = "climate-finance"
version = "1.1.2"
description = "Climate Finance data"
authors = [
    {name = "Jorge Rivera, The ONE Campaign"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas (>=2.0,<3.0.0)",
    "requests (>=2.30,<3.0.0)",
    "selenium (>=4.20,<5.0.0)",
    "openpyxl (>=3.1,<4.0.0)",
    "oda-data (>=2.0.1,<3.0.0)",
    "bblocks (>=1.4,<2.0.0)",
    "thefuzz[speedup] (>=0.20,<0.23.0)",
    "webdriver-manager (>=4.0,<5.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
