[project]
name = "climate-finance"
version = "1.2.0"
description = "Climate Finance data"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Jorge Rivera", email = "jorge.rivera@one.org" }
]

dependencies = [
    "bblocks>=1.4.3,<2",
    "oda-data>=2.1.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "thefuzz[speedup]>=0.22.1",
    "webdriver-manager>=4.0.2",
]

[tool.setuptools.packages.find]
include = ["climate_finance"]